--- a/kibanda.html
+++ b/kibanda.html
@@ -275,13 +275,11 @@
 { title: "Episode 4", url: "https://drive.google.com/file/d/1Pcvq3QWDfV2bc4QdG-zyKOESGYAeDllq/view" },
 { title: "Episode 5", url: "https://drive.google.com/file/d/1CvQSgtE0ceZdlS8inNXO2bIgeu5aWlTz/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/1W10S256gnVrJMAPE33rldU9OkksRfnd-/view" },
-
 { title: "Episode 7", url: "https://drive.google.com/file/d/1OYIe8Dfyp2GGtFULt1Ad0PC0WaIq_3-Z/view" },
 { title: "Episode 8", url: "https://drive.google.com/file/d/1ZZa-MeIn78gEajUBM6f0nfnzFdL28TuN/view" },
 { title: "Episode 9", url: "https://drive.google.com/file/d/1HaMR1Utz4IdpDffVYQDDFm89mlKAv60T/view" },
 { title: "Episode 10", url: "https://drive.google.com/file/d/1n17ohs6WeIPB_PpayWPiuA1uhx-orZpy/view" },
 { title: "Episode 11", url: "https://drive.google.com/file/d/1j3ejskhv6Hz51_OLGVo4ecF5ZCbc1ozT/view" },
-
 { title: "Episode 12", url: "https://drive.google.com/file/d/1SOcAooskpIK2538MA9GL7OaEGr2pcGnO/view" },
 { title: "Episode 13", url: "https://drive.google.com/file/d/1-hbW7mYDo6rQKXnMeupETRjoxrd-9m84/view" },
 { title: "Episode 14", url: "https://drive.google.com/file/d/1KF72-NDNMw7n5FdyMkNNAkEQ8iNxSDQN/view" },
@@ -294,6 +292,7 @@
  { title: "Episode 21", url: "https://drive.google.com/file/d/1E_Y5zq6I8Dr8QR8IWk4rs6d4T9yJb9B3/view" },
 { title: "Episode 22", url: "https://drive.google.com/file/d/14bVKJ7XQz8QsQrwcBoM4RjPB2DfxMiGD/view" },
 { title: "Episode 23", url: "https://drive.google.com/file/d/1dB9VYbPbWxstjqdra5BG4Iqvu3bamszC/view" },
+{ title: "Episode 24", url: "https://drive.google.com/file/d/1LDu_TFyIBlFoCaweBLyYGRswXsmxlNaG/view" },
 ]
           },
      {
