--- a/kibanda.html
+++ b/kibanda.html
@@ -240,6 +240,7 @@
 { title: "Episode 14", url: "https://drive.google.com/file/d/13tXu8Z7Eg8dkKn0q8NXvFuZwGYzZU9xj/view" },
 { title: "Episode 15", url: "https://drive.google.com/file/d/196wbn0LGK47vuEVyM_hOzzWV3vc-hsIQ/view" },
 { title: "Episode 16", url: "https://drive.google.com/file/d/1AdUvtPVlciFMSjhxEpXY8n_afVfn3Ib8/view" },
+{ title: "Episode 17", url: "https://drive.google.com/file/d/1_NEosF7567yW_T9fC8fBil102E7W8EIo/view" },
 ]
           },
      {
