--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,17 @@
     const movies = [
 
          {
+                                                                             type: "series",
+        title: "RADHE",
+        poster: "https://i.ibb.co/SDjNgMyH/Chat-GPT-Image-Feb-6-2026-01-26-06-PM.png",
+        description: "2026 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1cfELj-2ZxR2MKImCbvyIUP1xCSwdLYLh/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1VjyVd2wrUXfEPWEuPXaWd2bcLOuHJNq-/view" },
+
+]
+          },
+     {
                                                                        type: "series",
         title: "DANGEBAAJI",
         poster: "https://i.ibb.co/7tPwBcqk/aaaaaaaaa.jpg",
@@ -241,6 +252,8 @@
 { title: "Episode 15", url: "https://drive.google.com/file/d/196wbn0LGK47vuEVyM_hOzzWV3vc-hsIQ/view" },
 { title: "Episode 16", url: "https://drive.google.com/file/d/1AdUvtPVlciFMSjhxEpXY8n_afVfn3Ib8/view" },
 { title: "Episode 17", url: "https://drive.google.com/file/d/1_NEosF7567yW_T9fC8fBil102E7W8EIo/view" },
+ { title: "Episode 18", url: "https://drive.google.com/file/d/14U4wkWVoZRv6lq3cXS_b5DQPtYEncxGs/view" },
+ { title: "Episode 19", url: "https://drive.google.com/file/d/11mHvKYkDDgzGbo5xNyLn7uTWoFU-ZfYx/view" },
 ]
           },
      {
