--- a/kibanda.html
+++ b/kibanda.html
@@ -254,6 +254,7 @@
 { title: "Episode 17", url: "https://drive.google.com/file/d/1_NEosF7567yW_T9fC8fBil102E7W8EIo/view" },
  { title: "Episode 18", url: "https://drive.google.com/file/d/14U4wkWVoZRv6lq3cXS_b5DQPtYEncxGs/view" },
  { title: "Episode 19", url: "https://drive.google.com/file/d/11mHvKYkDDgzGbo5xNyLn7uTWoFU-ZfYx/view" },
+ { title: "Episode 20", url: "https://drive.google.com/file/d/1vIszUuwetCBA1Rwh_g7rvt7EN74LZhCP/view" },
 ]
           },
      {
