--- a/series.html
+++ b/series.html
@@ -178,7 +178,7 @@ body{
 <!-- NAV -->
 <div class="nav">
   <button onclick="location.href='watch.html'">🏠 Home</button>
-  <button onclick="location.href='movi.html'">🎬 Movies</button>
+  <button onclick="location.href='movies.html'">🎬 Movies</button>
   <button onclick="location.href='donate.html'">❤️ Donate</button>
   <button onclick="location.href='marriage.html'">💍 Marriage Tips</button>
 </div>
