--- a/home.html
+++ b/home.html
@@ -260,6 +260,7 @@ body{
     <a href="about.html" class="btn about">Are You New?</a>
     <a href="library-login.html" class="btn library">Library</a>
     <a href="kibanda-login.html" class="btn kibanda">Kibanda</a>
+        <a href="refer.html" class="btn subscribe">Share And win</a>
   </div>
 </div>
 
@@ -468,3 +469,6 @@ audioToggle.onclick = () => {
 
 </body>
 </html>
+
+
+
