--- a/kibanda.html
+++ b/kibanda.html
@@ -187,6 +187,7 @@
 { title: "Episode 23", url: "https://drive.google.com/file/d/1dB9VYbPbWxstjqdra5BG4Iqvu3bamszC/view" },
 { title: "Episode 24", url: "https://drive.google.com/file/d/1LDu_TFyIBlFoCaweBLyYGRswXsmxlNaG/view" },
 { title: "Episode 25", url: "https://drive.google.com/file/d/1PRyQgZE9Ko3tfJmdS3ZUr9UreSsfDP-w/view" },
+{ title: "Episode 26", url: "https://drive.google.com/file/d/1XVORpx0zFi95WZu6-1AM8mPHWDgWt90m/view" },
 ]
           },
      {
