--- a/kibanda.html
+++ b/kibanda.html
@@ -188,6 +188,7 @@
 { title: "Episode 24", url: "https://drive.google.com/file/d/1LDu_TFyIBlFoCaweBLyYGRswXsmxlNaG/view" },
 { title: "Episode 25", url: "https://drive.google.com/file/d/1PRyQgZE9Ko3tfJmdS3ZUr9UreSsfDP-w/view" },
 { title: "Episode 26", url: "https://drive.google.com/file/d/1XVORpx0zFi95WZu6-1AM8mPHWDgWt90m/view" },
+{ title: "Episode 27", url: "https://drive.google.com/file/d/1HLLBouYjLCUe4bhy5vEm3GnyqOf8NQWv/preview"},
 ]
           },
      {
