--- a/kibanda.html
+++ b/kibanda.html
@@ -189,6 +189,9 @@
 { title: "Episode 25", url: "https://drive.google.com/file/d/1PRyQgZE9Ko3tfJmdS3ZUr9UreSsfDP-w/view" },
 { title: "Episode 26", url: "https://drive.google.com/file/d/1XVORpx0zFi95WZu6-1AM8mPHWDgWt90m/view" },
 { title: "Episode 27", url: "https://drive.google.com/file/d/1HLLBouYjLCUe4bhy5vEm3GnyqOf8NQWv/preview"},
+{ title: "Episode 28", url: "https://drive.google.com/file/d/12X_HqmYdZsjH6wYB-cKC5Y7tyUXeGosO/view"},
+{ title: "Episode 29", url: "https://drive.google.com/file/d/1IstrZc9rVoQC39dAMDLOo4xmqR8q49uP/view"},
+{ title: "Episode 30", url: "https://drive.google.com/file/d/161u8Ehv1YEOh811i1vFRlpIGZYRsd5YD/view"},
 ]
           },
      {
