--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,20 @@
     const movies = [
 
          {
+                                                                                  type: "series",
+        title: "HIJACK",
+        poster: "https://resizing.flixster.com/ZSCdh98XNdBaYe8YuBP0E6hW3L8=/fit-in/352x330/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p24706006_b_v13_ak.jpg",
+        description: "2026 USA Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1SxYJMDrHdka6Y5TsoqcVfQtvSkbTO-jA/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1PODkgDcAERiURfsmSfDbqVM4Ia3vocaO/view" },
+{ title: "Episode 3", url: "https://drive.google.com/file/d/16G03W8MG4Jt23fBUbkpuHxsdp5SspR5s/view" },
+{ title: "Episode 4", url: "https://drive.google.com/file/d/1kB2qnxtYikTueIfdeaBcG2EpViG1H3aI/view" },
+{ title: "Episode 5", url: "https://drive.google.com/file/d/101gLJxYP_ZSdrtYe74giy10P69NEm_nT/view" },
+
+]
+          },
+     {
                   type: "series",
         title: "HOT BLOODED",
         poster: "https://i.pinimg.com/originals/d6/89/82/d689823b1efd1b8be8e1880aaa859eb5.jpg",
