--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,29 @@
     const movies = [
 
          {
+                                                                                        type: "series",
+        title: "DIVAAR",
+        poster: "https://filmfare.wwmindia.com/content/2024/sep/devara31727340450.jpg",
+        description: "2026 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1AjRzspXdbztAw-88PDi84qz2VNfA1g5o/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1hefq2CbRkq549NIhv9ub-mbo0uPwT7eh/view" },
+
+
+]
+          },
+     {
+                                                                                     type: "series",
+        title: "THE FALLEN GENERAL",
+        poster: "https://resizing.flixster.com/PabZ8pul8SoEW7ejuxhGwZqVkTY=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p24020348_k_v10_ab.jpg",
+        description: "2026 Chine Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1hefq2CbRkq549NIhv9ub-mbo0uPwT7eh/view" },
+
+
+]
+          },
+     {
                                                                                   type: "series",
         title: "HIJACK",
         poster: "https://resizing.flixster.com/ZSCdh98XNdBaYe8YuBP0E6hW3L8=/fit-in/352x330/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p24706006_b_v13_ak.jpg",
