--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,18 @@
     const movies = [
 
          {
+                                                                                           type: "series",
+        title: "GUSSA",
+        poster: "https://screenanarchy.com/assets_c/2013/05/Shootout-at-Wadala-poster6-thumb-860x860-38324.jpg",
+        description: "2025 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1KOg2peI47OW0mX1gc0BVPCyU22gAb3Ro/preview" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1QHUWJ14SqBPuD6UXJKGRenaQU4IEZdWh/preview" },
+
+
+]
+          },
+     {
                                                                                         type: "series",
         title: "DIVAAR",
         poster: "https://filmfare.wwmindia.com/content/2024/sep/devara31727340450.jpg",
