--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,18 @@
     const movies = [
 
          {
+                                                                                                      type: "series",
+        title: "GAREEB",
+        poster: "https://i.ibb.co/LzjLn20W/Untitled-1.jpg",
+        description: "2026 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/10VwGPfi4C0nqUhj5qlwdwxAvY9bVPFGW/preview" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1NoZpfXT3UKwhEqLev99OJLUe15PFsHZB/preview" },
+
+
+]
+          },
+     {
                                                                                                 type: "series",
         title: "GADEE CHALAN",
         poster: "https://media.assettype.com/deccanherald%2F2024-09-05%2F84f4nmsm%2FGWrVXfVa8AABnWr.jpeg?rect=0%2C0%2C1536%2C2048",
