--- a/kibanda.html
+++ b/kibanda.html
@@ -183,7 +183,7 @@
      {
                                                                                            type: "series",
         title: "GUSSA",
-        poster: "https://screenanarchy.com/assets_c/2013/05/Shootout-at-Wadala-poster6-thumb-860x860-38324.jpg",
+        poster: "https://i.ibb.co/JWCtkjXv/Untitled.jpg",
         description: "2025 India Action ",
         episodes: [
 { title: "Episode 1", url: "https://drive.google.com/file/d/1KOg2peI47OW0mX1gc0BVPCyU22gAb3Ro/view" },
