--- a/movie.html
+++ b/movie.html
@@ -70,8 +70,8 @@ padding:20px;border-radius:12px;display:none;}
 
 <div id="upgradePopup">
   <h3>Remove Ads 🚀</h3>
-  <p>Upgrade to premium for ad-free streaming.</p>
-  <button onclick="window.location.href='upgrade.html'">
+  <p>If you pay, you will not see these annoying ads again.</p>
+  <button onclick="window.location.href='packages.html'">
     Upgrade Now
   </button>
 </div>
