--- a/movie.html
+++ b/movie.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="movies-data.js"></script>
 
-<!-- Firebase SDKs -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -25,7 +25,6 @@ const db = firebase.database();
 </script>
 
 <style>
-/* Keep your same styles here (unchanged) */
 body{margin:0;background:#111;color:#fff;font-family:Arial;}
 .banner{position:relative;height:55vh;display:flex;align-items:flex-end;justify-content:center;}
 .banner img{width:100%;height:100%;object-fit:cover;}
@@ -40,6 +39,7 @@ display:none;justify-content:center;align-items:center;flex-direction:column;z-i
 .countdown{font-size:24px;color:#00ff99;margin:15px 0;}
 #upgradePopup{position:fixed;bottom:20px;right:20px;background:#1c1c1c;
 padding:20px;border-radius:12px;display:none;}
+#bannerAd{text-align:center;margin:20px 0;}
 </style>
 </head>
 
@@ -60,7 +60,7 @@ padding:20px;border-radius:12px;display:none;}
 </div>
 
 <iframe id="player" class="player" allowfullscreen></iframe>
-<div id="bannerAd" style="text-align:center;margin:20px 0;"></div>
+<div id="bannerAd"></div>
 
 <div id="adOverlay">
   <h2>Advertisement</h2>
@@ -78,20 +78,19 @@ padding:20px;border-radius:12px;display:none;}
 
 <script>
 
-// ===== GET MOVIE =====
+// ===== MOVIE LOAD =====
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 if(!id) location.href="movies-list.html";
 const movie = MOVIES.find(m => m.id === id);
 if(!movie) location.href="movies-list.html";
 
-// Populate
 title.textContent = movie.title;
 posterImg.src = movie.poster;
 synopsis.textContent = movie.synopsis || "";
 meta.textContent = `${movie.year} • ${movie.duration||""}`;
 
-// Normalize URLs
+// ===== URL NORMALIZER =====
 function getVideoUrl(url){
   if(url.includes("youtube")){
     const ytId = new URL(url).searchParams.get("v");
@@ -107,56 +106,33 @@ function getVideoUrl(url){
 const player = document.getElementById("player");
 const adOverlay = document.getElementById("adOverlay");
 const countdownEl = document.getElementById("countdown");
+const upgradePopup = document.getElementById("upgradePopup");
+const bannerAd = document.getElementById("bannerAd");
 let isPaidUser = false;
 
-// ===== VERIFY PIN FROM FIREBASE =====
+// ===== VERIFY PIN =====
 async function verifyPIN(){
 
   const storedPIN = localStorage.getItem("validPIN");
   const storedDevice = localStorage.getItem("deviceId");
 
-  if(!storedPIN || !storedDevice){
-    return false;
-  }
+  if(!storedPIN || !storedDevice) return false;
 
-  try {
-
+  try{
     const snapshot = await db.ref("pins/" + storedPIN).once("value");
-
-    if(!snapshot.exists()){
-      localStorage.removeItem("validPIN");
-      return false;
-    }
+    if(!snapshot.exists()) return false;
 
     const data = snapshot.val();
 
-    // 1️⃣ Must be used
-    if(!data.used){
-      localStorage.removeItem("validPIN");
-      return false;
-    }
+    if(!data.used) return false;
+    if(Date.now() > data.expiry) return false;
+    if(data.activeDevice !== storedDevice) return false;
 
-    // 2️⃣ Must not be expired
-    if(Date.now() > data.expiry){
-      localStorage.removeItem("validPIN");
-      return false;
-    }
-
-    // 3️⃣ Must match active device
-    if(data.activeDevice !== storedDevice){
-      localStorage.removeItem("validPIN");
-      return false;
-    }
-
-    // Everything valid
     return true;
-
-  } catch(err){
-    console.error("Firebase verification error:", err);
+  } catch(e){
     return false;
   }
 }
-
 
 // ===== START MOVIE =====
 function startMovie(){
@@ -191,31 +167,37 @@ function playWithAd(){
   },1000);
 }
 
+// ===== LOAD BANNER AD PROPERLY =====
+function loadBannerAd(){
+
+  const script1 = document.createElement("script");
+  script1.innerHTML = `
+    atOptions={
+      'key':'1c9ccdb756a82c4d663014a338917bd7',
+      'format':'iframe',
+      'height':250,
+      'width':300,
+      'params':{}
+    };
+  `;
+  bannerAd.appendChild(script1);
+
+  const script2 = document.createElement("script");
+  script2.src="https://www.highperformanceformat.com/1c9ccdb756a82c4d663014a338917bd7/invoke.js";
+  bannerAd.appendChild(script2);
+}
+
 // ===== INIT =====
-verifyPIN().then(valid => {
-  isPaidUser = valid;
+document.addEventListener("DOMContentLoaded", async ()=>{
 
-  if(!isPaidUser){
-    document.getElementById("upgradePopup").style.display="block";
+  isPaidUser = await verifyPIN();
 
-    // Load Ads
-    const social=document.createElement("script");
-    social.src="https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js";
-    document.body.appendChild(social);
-
-    const banner=document.getElementById("bannerAd");
-    banner.innerHTML=`
-      <script>
-        atOptions={
-          'key':'1c9ccdb756a82c4d663014a338917bd7',
-          'format':'iframe',
-          'height':250,
-          'width':300,
-          'params':{}
-        };
-      <\/script>
-      <script src="https://www.highperformanceformat.com/1c9ccdb756a82c4d663014a338917bd7/invoke.js"><\/script>
-    `;
+  if(isPaidUser){
+    upgradePopup.style.display="none";
+    bannerAd.style.display="none";
+  } else {
+    upgradePopup.style.display="block";
+    loadBannerAd();
   }
 });
 
