--- a/watch.html
+++ b/watch.html
@@ -132,7 +132,7 @@ footer{
 
   <div class="info-box">
     <div class="info-row">
-      <span class="label">Your PIN</span>
+      <span class="label">Your Password</span>
       <span class="value">••••••••</span>
     </div>
     <div class="info-row">
