--- a/movie.html
+++ b/movie.html
@@ -12,8 +12,13 @@ body {
   background:#111;
   color:#fff;
   font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
+/* Banner at top */
 .banner {
   position: relative;
   width: 100%;
@@ -31,14 +36,13 @@ body {
   object-fit: cover;
   object-position: center;
   transition: transform 0.6s ease;
-  transform: scale(1.1); /* zoom for Netflix feel */
+  transform: scale(1.1);
 }
 
 .banner:hover img {
   transform: scale(1.15);
 }
 
-/* Full gradient overlay */
 .banner::after {
   content:"";
   position:absolute;
@@ -50,7 +54,6 @@ body {
   pointer-events:none;
 }
 
-/* Buttons on top of gradient */
 .banner .buttons {
   position: absolute;
   bottom: 30px;
@@ -58,7 +61,7 @@ body {
   gap:12px;
   justify-content:center;
   width:100%;
-  z-index: 2; /* ensure buttons above gradient */
+  z-index: 2;
 }
 
 button {
@@ -69,17 +72,15 @@ button {
   cursor:pointer;
   font-weight:bold;
   box-shadow:0 2px 6px rgba(0,0,0,0.5);
-  opacity: 1; /* fully visible */
   transition: transform 0.2s;
 }
 
-button:hover {
-  transform: scale(1.05);
-}
+button:hover { transform: scale(1.05); }
 
 button#watchBtn { background:#e50914; color:#fff; }
 button#shareBtn { background:#25D366; color:#fff; }
 
+/* Details */
 .details {
   max-width:900px;
   margin:20px auto;
@@ -99,9 +100,68 @@ button#shareBtn { background:#25D366; color:#fff; }
   border-radius:12px;
 }
 
+/* Ads Containers */
+.ad-vertical-left,
+.ad-vertical-right {
+  position: fixed;
+  top: 100px;
+  width: 120px;
+  display:flex;
+  flex-direction: column;
+  gap:20px;
+  z-index: 1000;
+}
+
+.ad-vertical-left { left:0; }
+.ad-vertical-right { right:0; }
+
+.ad-horizontal {
+  width: 100%;
+  max-width: 1200px;
+  margin: 10px auto;
+  display:flex;
+  justify-content:center;
+  gap:10px;
+}
+
+.ad-slot {
+  background:#222;
+  color:#fff;
+  width: 100%;
+  height: 250px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:14px;
+  border: 1px solid #555;
+}
+
+/* Upgrade popup */
+#upgradePopup {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background:#e50914;
+  color:#fff;
+  padding:16px 24px;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 2px 10px rgba(0,0,0,0.7);
+  z-index: 2000;
+  display:none;
+  transition: transform 0.3s;
+}
+
+#upgradePopup:hover {
+  transform: scale(1.05);
+}
+
+/* Mobile adjustments */
 @media (max-width:768px){
   .banner { height: 40vh; }
   button { font-size:14px; padding:12px 20px; }
+  .ad-vertical-left, .ad-vertical-right { display:none; }
 }
 </style>
 </head>
@@ -115,15 +175,44 @@ button#shareBtn { background:#25D366; color:#fff; }
   </div>
 </div>
 
+<!-- Horizontal top ads -->
+<div class="ad-horizontal" id="topAds"></div>
+
 <div class="details">
   <h1 id="title">Loading...</h1>
   <p id="synopsis"></p>
   <p id="meta"></p>
 </div>
 
+<!-- Vertical side ads -->
+<div class="ad-vertical-left" id="leftAds"></div>
+<div class="ad-vertical-right" id="rightAds"></div>
+
 <iframe id="player" class="player" allowfullscreen></iframe>
 
+<!-- Horizontal bottom ads -->
+<div class="ad-horizontal" id="bottomAds"></div>
+
+<!-- Upgrade Popup -->
+<div id="upgradePopup">UPGRADE TO SKIP ADS</div>
+
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
 <script>
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
+  authDomain: "busanso-pins.firebaseapp.com",
+  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
+  projectId: "busanso-pins",
+  storageBucket: "busanso-pins.firebasestorage.app",
+  messagingSenderId: "137040014808",
+  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
+};
+firebase.initializeApp(firebaseConfig);
+
 // ===== GET MOVIE ID =====
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
@@ -167,7 +256,6 @@ function playMovie(){
   watchBtn.style.display = "none";
   shareBtn.style.display = "none";
 
-  // Request full screen
   if(player.requestFullscreen){ player.requestFullscreen(); }
   else if(player.webkitRequestFullscreen){ player.webkitRequestFullscreen(); }
   else if(player.msRequestFullscreen){ player.msRequestFullscreen(); }
@@ -182,6 +270,80 @@ shareBtn.addEventListener("click", ()=>{
   const url = `https://api.whatsapp.com/send?text=${encodeURIComponent(text)}`;
   window.open(url, "_blank");
 });
+
+// ===== ADS & UPGRADE LOGIC =====
+function loadAds(){
+  const topAds = document.getElementById("topAds");
+  const bottomAds = document.getElementById("bottomAds");
+  const leftAds = document.getElementById("leftAds");
+  const rightAds = document.getElementById("rightAds");
+
+  // 3 top banners
+  for(let i=1;i<=3;i++){
+    const slot = document.createElement("div");
+    slot.className = "ad-slot";
+    slot.textContent = `Top Banner Ad ${i}`;
+    topAds.appendChild(slot);
+  }
+
+  // 3 bottom banners
+  for(let i=1;i<=3;i++){
+    const slot = document.createElement("div");
+    slot.className = "ad-slot";
+    slot.textContent = `Bottom Banner Ad ${i}`;
+    bottomAds.appendChild(slot);
+  }
+
+  // 3 left & right side ads
+  for(let i=1;i<=3;i++){
+    const lslot = document.createElement("div");
+    lslot.className = "ad-slot";
+    lslot.textContent = `Side Ad ${i}`;
+    leftAds.appendChild(lslot);
+
+    const rslot = document.createElement("div");
+    rslot.className = "ad-slot";
+    rslot.textContent = `Side Ad ${i}`;
+    rightAds.appendChild(rslot);
+  }
+
+  // Load external ad scripts
+  const adScript1 = document.createElement("script");
+  adScript1.src = "https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js";
+  document.body.appendChild(adScript1);
+
+  const adScript2 = document.createElement("script");
+  adScript2.textContent = `
+    atOptions = {
+      'key' : '1c9ccdb756a82c4d663014a338917bd7',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  `;
+  document.body.appendChild(adScript2);
+
+  const adScript3 = document.createElement("script");
+  adScript3.src = "https://www.highperformanceformat.com/1c9ccdb756a82c4d663014a338917bd7/invoke.js";
+  document.body.appendChild(adScript3);
+}
+
+// Show ads if no activePIN
+function checkActivePIN(){
+  const activePIN = localStorage.getItem("activePIN");
+  if(!activePIN){
+    loadAds();
+    // Show upgrade popup
+    const popup = document.getElementById("upgradePopup");
+    popup.style.display = "block";
+    popup.addEventListener("click", ()=>{
+      alert("packages.html"); // replace with real upgrade link
+    });
+  }
+}
+
+checkActivePIN();
 </script>
 
 </body>
