--- a/movie.html
+++ b/movie.html
@@ -101,19 +101,24 @@ button#shareBtn { background:#25D366; color:#fff; }
 }
 
 /* Ads Containers */
-.ad-vertical-left,
-.ad-vertical-right {
+.ad-vertical-left, .ad-vertical-right {
   position: fixed;
   top: 100px;
-  width: 120px;
-  display:flex;
+  width: 160px;
+  display: flex;
   flex-direction: column;
-  gap:20px;
+  gap: 20px;
   z-index: 1000;
+  background: rgba(0,0,0,0.85);
+  padding: 5px;
+  border-radius: 6px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
-.ad-vertical-left { left:0; }
-.ad-vertical-right { right:0; }
+.ad-vertical-left { left: 10px; }
+.ad-vertical-right { right: 10px; }
+
 
 .ad-horizontal {
   width: 100%;
