--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,18 @@
     const movies = [
 
          {
+                                                                                                                      type: "series",
+        title: "RAILWAY MEMORIES",
+        poster: "https://is.zobj.net/image-server/v1/images?r=YdRq994RKT6GPWTWRwaFR0PZQg0DzeNQ6rMzh8IT_X0c1g_Ic0JwK-dYZRbYfpzPGtbRD7SOkAa2YAKkzGGwcWQT5K1vx1yT4kEUygrWUZQsFhpp3_F9hsyeEyW77eHJ6QEnFSLZnTqaqV25U5GF1Do6rJZXgkhSZwrNwhC8NrhnZ2NhXMX8hPMKjgd56EeaSEqo8zBEJBIyPr0MBcAYevc4wEd3IW6MEPWcow",
+        description: "2025 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/11UVYYgNbBT8Xn6EOh5BTfrMyUlqa-zKQ/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1tG_E0CERSUmwNl4o-YT-Pqi-nzFxEfbg/view" },
+
+
+]
+          },
+     
                                                                                                                    type: "series",
         title: "TALAVAR",
         poster: "https://i.ibb.co/BHBZ0kLW/ZZZZZZZZZZZZZZZZZZZZZZZZ.jpg",
